.main fix color contrast

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -22,12 +22,12 @@
         }
 
         p {
-            color: $grayish-violet;
+            color: #595959;
         }
 
         .get_started_link {
             margin-top: .75rem;
-            background: $cyan;
+            background: #1B8383;
             padding: .75rem 2rem;
             border-radius: 5rem;
             color: #fff;
