--- a/style/style.css
+++ b/style/style.css
@@ -146,11 +146,11 @@ img {
   color: hsl(255deg, 11%, 22%);
 }
 .main .main_text_wrapper p {
-  color: hsl(257deg, 7%, 63%);
+  color: #595959;
 }
 .main .main_text_wrapper .get_started_link {
   margin-top: 0.75rem;
-  background: hsl(180deg, 66%, 49%);
+  background: #1B8383;
   padding: 0.75rem 2rem;
   border-radius: 5rem;
   color: #fff;
